# odrawer

./: .gitmodules  CMakeLists.txt  LICENSE.md  main.cpp
include/elements/: Button.hpp
include/network/: Client.hpp  NetworkInterface.hpp  Server.hpp
include/shapes/: BaseShape.hpp  Circle.hpp  Line.hpp  LinesPath.hpp  Rectangle.hpp
include/tools/: BaseTool.hpp  CircleTool.hpp  LinesTool.hpp  RectangleTool.hpp
include/utils/: SerializableColor.hpp  SerializableFloatVector.hpp  SerializationConfig.hpp  SerializeUtils.hpp
src/: main.cpp
src/elements/: Button.cpp
src/network/: Client.cpp  Server.cpp
src/shapes/: BaseShape.cpp  Circle.cpp  Line.cpp  LinesPath.cpp  Rectangle.cpp
src/tools/: BaseTool.cpp  CircleTool.cpp  LinesTool.cpp  RectangleTool.cpp
src/utils/: SerializeUtils.cpp
